bsdkm: enable-debug.

--- a/configure.ac
+++ b/configure.ac
@@ -830,6 +830,11 @@ then
     AM_CFLAGS="$AM_CFLAGS -DXMALLOC_OVERRIDE -DWOLFCRYPT_ONLY"
     AM_CFLAGS="$AM_CFLAGS -DNO_ASN_TIME"
 
+    if test "$ax_enable_debug" = "yes"; then
+        AM_CFLAGS="$AM_CFLAGS -DWOLFSSL_BSDKM_VERBOSE_DEBUG"
+        AM_CFLAGS="$AM_CFLAGS -DNO_WOLFSSL_DEBUG_CERTS"
+    fi
+
     if test "$KERNEL_ROOT" = ""; then
         AC_PATH_DEFAULT_BSDKM_SOURCE
         KERNEL_ROOT="$DEFAULT_BSDKM_ROOT"
