Rust wrapper: rename wolfssl crate to wolfssl-wolfcrypt

--- a/wrapper/rust/Makefile
+++ b/wrapper/rust/Makefile
@@ -1,11 +1,11 @@
 .PHONY: all
 all:
-	+$(MAKE) -C wolfssl
+	+$(MAKE) -C wolfssl-wolfcrypt
 
 .PHONY: test
 test:
-	+$(MAKE) -C wolfssl test
+	+$(MAKE) -C wolfssl-wolfcrypt test
 
 .PHONY: clean
 clean:
-	+$(MAKE) -C wolfssl clean
+	+$(MAKE) -C wolfssl-wolfcrypt clean
