--- a/linuxkm/include.am
+++ b/linuxkm/include.am
@@ -5,6 +5,7 @@
 EXTRA_DIST += m4/ax_linuxkm.m4 \
 	      linuxkm/Kbuild \
 	      linuxkm/Makefile \
+	      linuxkm/README.md \
 	      linuxkm/get_thread_size.c \
 	      linuxkm/module_hooks.c \
 	      linuxkm/module_exports.c.template \
