--- a/wrapper/rust/wolfssl-wolfcrypt/Cargo.toml
+++ b/wrapper/rust/wolfssl-wolfcrypt/Cargo.toml
@@ -8,6 +8,7 @@ repository = "https://github.com/wolfSSL/wolfssl"
 documentation = "https://github.com/wolfSSL/wolfssl/tree/master/wrapper/rust"
 keywords = ["wolfssl", "fips", "security", "encryption", "cryptography"]
 categories = ["cryptography", "security", "api-bindings"]
+readme = "README.md"
 
 [features]
 std = []
