Update include.am for Rust crate rename

--- a/wrapper/rust/include.am
+++ b/wrapper/rust/include.am
@@ -7,23 +7,24 @@ EXTRA_DIST += wrapper/rust/README.md
 EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/Cargo.lock
 EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/Cargo.toml
 EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/Makefile
+EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/README.md
 EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/build.rs
 EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/headers.h
+EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/src/aes.rs
+EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/src/cmac.rs
+EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/src/dh.rs
+EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/src/ecc.rs
+EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/src/ed25519.rs
+EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/src/ed448.rs
+EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/src/hkdf.rs
+EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/src/hmac.rs
+EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/src/kdf.rs
 EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/src/lib.rs
-EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/src/wolfcrypt.rs
-EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/src/wolfcrypt/aes.rs
-EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/src/wolfcrypt/cmac.rs
-EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/src/wolfcrypt/dh.rs
-EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/src/wolfcrypt/ecc.rs
-EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/src/wolfcrypt/ed25519.rs
-EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/src/wolfcrypt/ed448.rs
-EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/src/wolfcrypt/hkdf.rs
-EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/src/wolfcrypt/hmac.rs
-EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/src/wolfcrypt/kdf.rs
-EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/src/wolfcrypt/prf.rs
-EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/src/wolfcrypt/random.rs
-EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/src/wolfcrypt/rsa.rs
-EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/src/wolfcrypt/sha.rs
+EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/src/prf.rs
+EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/src/random.rs
+EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/src/rsa.rs
+EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/src/sha.rs
+EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/src/sys.rs
 EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/tests/test_aes.rs
 EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/tests/test_cmac.rs
 EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/tests/test_dh.rs
@@ -37,3 +38,4 @@ EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/tests/test_prf.rs
 EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/tests/test_random.rs
 EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/tests/test_rsa.rs
 EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/tests/test_sha.rs
+EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/tests/test_wolfcrypt.rs
