Fix incorrect use of CFLAGS in os-check

--- a/.github/workflows/os-check.yml
+++ b/.github/workflows/os-check.yml
@@ -59,7 +59,7 @@ jobs:
           '--enable-lms=small,verify-only --enable-xmss=small,verify-only',
           '--disable-sys-ca-certs',
           '--enable-all CPPFLAGS=-DWOLFSSL_DEBUG_CERTS ',
-          '--enable-all CFLAGS="-DWOLFSSL_CHECK_MEM_ZERO"',
+          '--enable-all CPPFLAGS="-DWOLFSSL_CHECK_MEM_ZERO"',
           '--enable-coding=no',
           '--enable-dtls --enable-dtls13 --enable-ocspstapling --enable-ocspstapling2
            --enable-cert-setup-cb --enable-sessioncerts',
