--- a/.github/workflows/os-check.yml
+++ b/.github/workflows/os-check.yml
@@ -66,6 +66,8 @@ jobs:
           '--disable-sni --disable-ecc --disable-tls13 --disable-secure-renegotiation-info',
           'CPPFLAGS=-DWOLFSSL_BLIND_PRIVATE_KEY',
           '--enable-all --enable-certgencache',
+          '--enable-sessionexport --enable-dtls --enable-dtls13',
+          '--enable-sessionexport',
         ]
     name: make check
     if: github.repository_owner == 'wolfssl'
