--- a/IDE/Renesas/e2studio/SK-S7G2/include.am
+++ b/IDE/Renesas/e2studio/SK-S7G2/include.am
@@ -2,6 +2,7 @@
 # included from Top Level Makefile.am
 # All paths should be given relative to the root
 
+EXTRA_DIST+= IDE/Renesas/e2studio/SK-S7G2/.gitignore
 EXTRA_DIST+= IDE/Renesas/e2studio/SK-S7G2/README.md
 EXTRA_DIST+= IDE/Renesas/e2studio/SK-S7G2/wolfssl_lib/.cproject
 EXTRA_DIST+= IDE/Renesas/e2studio/SK-S7G2/wolfssl_lib/.project
