--- a/wrapper/rust/include.am
+++ b/wrapper/rust/include.am
@@ -4,6 +4,7 @@
 
 EXTRA_DIST += wrapper/rust/Makefile
 EXTRA_DIST += wrapper/rust/README.md
+EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/CHANGELOG.md
 EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/Cargo.lock
 EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/Cargo.toml
 EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/Makefile
@@ -11,6 +12,7 @@ EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/README.md
 EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/build.rs
 EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/headers.h
 EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/src/aes.rs
+EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/src/blake2.rs
 EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/src/cmac.rs
 EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/src/dh.rs
 EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/src/ecc.rs
@@ -26,6 +28,7 @@ EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/src/rsa.rs
 EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/src/sha.rs
 EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/src/sys.rs
 EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/tests/test_aes.rs
+EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/tests/test_blake2.rs
 EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/tests/test_cmac.rs
 EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/tests/test_dh.rs
 EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/tests/test_ecc.rs
