Rust wrapper: add wolfssl_wolfcrypt::curve25519 module

--- a/wrapper/rust/include.am
+++ b/wrapper/rust/include.am
@@ -14,6 +14,7 @@ EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/headers.h
 EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/src/aes.rs
 EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/src/blake2.rs
 EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/src/cmac.rs
+EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/src/curve25519.rs
 EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/src/dh.rs
 EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/src/ecc.rs
 EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/src/ed25519.rs
@@ -30,6 +31,7 @@ EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/src/sys.rs
 EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/tests/test_aes.rs
 EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/tests/test_blake2.rs
 EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/tests/test_cmac.rs
+EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/tests/test_curve25519.rs
 EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/tests/test_dh.rs
 EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/tests/test_ecc.rs
 EXTRA_DIST += wrapper/rust/wolfssl-wolfcrypt/tests/test_ed25519.rs
