--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -78,7 +78,8 @@ jobs:
             -DWOLFSSL_TLSX:BOOL=yes -DWOLFSSL_TPM:BOOL=yes -DWOLFSSL_CLU:BOOL=yes -DWOLFSSL_USER_SETTINGS:BOOL=no \
             -DWOLFSSL_USER_SETTINGS_ASM:BOOL=no -DWOLFSSL_WOLFSSH:BOOL=ON -DWOLFSSL_X86_64_BUILD_ASM:BOOL=yes \
             -DWOLFSSL_MLKEM=1 -DWOLFSSL_LMS=1 -DWOLFSSL_LMSSHA256192=1 -DWOLFSSL_EXPERIMENTAL=1 \
-            -DWOLFSSL_X963KDF:BOOL=yes \
+            -DWOLFSSL_X963KDF:BOOL=yes -DWOLFSSL_DILITHIUM:BOOL=yes -DWOLFSSL_PKCS11:BOOL=yes \
+            -DWOLFSSL_ECCSI:BOOL=yes -DWOLFSSL_SAKKE:BOOL=yes -DWOLFSSL_SIPHASH:BOOL=yes \
             -DCMAKE_C_FLAGS="-DWOLFSSL_DTLS_CH_FRAG" \
             ..
         cmake --build .
@@ -88,9 +89,6 @@ jobs:
         # clean up
         cd ..
         rm -rf build
-
-        # Kyber Cmake broken
-        # -DWOLFSSL_KYBER:BOOL=yes
 
 # build "lean-tls" wolfssl
     - name: Build wolfssl with lean-tls
@@ -102,6 +100,25 @@ jobs:
             -DWOLFSSL_LEAN_TLS:BOOL=yes \
             ..
         cmake --build .
+        cmake --install .
+
+        # clean up
+        cd ..
+        rm -rf build
+
+# CMake build with user_settings.h
+    - name: Build wolfssl with user_settings.h
+      working-directory: ./wolfssl
+      run: |
+        mkdir build
+        cp examples/configs/user_settings_all.h ./build/user_settings.h
+        cd build
+        cmake -DCMAKE_VERBOSE_MAKEFILE:BOOL=ON -DWOLFSSL_INSTALL=yes -DCMAKE_INSTALL_PREFIX="$GITHUB_WORKSPACE/install" \
+            -DWOLFSSL_USER_SETTINGS=ON -DWOLFSSL_USER_SETTINGS_ASM=ON -DWOLFSSL_EXAMPLES=ON -DWOLFSSL_CRYPT_TESTS=ON \
+            -DCMAKE_C_FLAGS="${CMAKE_C_FLAGS} -I ." \
+            ..
+        cmake --build .
+        ctest -j $(nproc)
         cmake --install .
 
         # clean up
