--- a/tests/api/include.am
+++ b/tests/api/include.am
@@ -93,6 +93,16 @@ tests_unit_test_SOURCES += tests/api/test_ossl_x509_str.c
 tests_unit_test_SOURCES += tests/api/test_ossl_x509_lu.c
 # SSL PEM
 tests_unit_test_SOURCES += tests/api/test_ossl_pem.c
+# SSL Random
+tests_unit_test_SOURCES += tests/api/test_ossl_rand.c
+tests_unit_test_SOURCES += tests/api/test_ossl_obj.c
+tests_unit_test_SOURCES += tests/api/test_ossl_p7p12.c
+# EVP APIs
+tests_unit_test_SOURCES += tests/api/test_evp_digest.c
+tests_unit_test_SOURCES += tests/api/test_evp_cipher.c
+tests_unit_test_SOURCES += tests/api/test_evp_pkey.c
+# CertificateManager
+tests_unit_test_SOURCES += tests/api/test_certman.c
 # TLS 1.3 specific
 tests_unit_test_SOURCES += tests/api/test_tls13.c
 endif
@@ -174,5 +184,12 @@ EXTRA_DIST += tests/api/test_ossl_x509_info.h
 EXTRA_DIST += tests/api/test_ossl_x509_str.h
 EXTRA_DIST += tests/api/test_ossl_x509_lu.h
 EXTRA_DIST += tests/api/test_ossl_pem.h
+EXTRA_DIST += tests/api/test_ossl_rand.h
+EXTRA_DIST += tests/api/test_ossl_obj.h
+EXTRA_DIST += tests/api/test_ossl_p7p12.h
+EXTRA_DIST += tests/api/test_evp_digest.h
+EXTRA_DIST += tests/api/test_evp_cipher.h
+EXTRA_DIST += tests/api/test_evp_pkey.h
+EXTRA_DIST += tests/api/test_certman.h
 EXTRA_DIST += tests/api/test_tls13.h
 
