--- a/tests/test-ecc-cust-curves.conf
+++ b/tests/test-ecc-cust-curves.conf
@@ -49,7 +49,7 @@
 -A ./certs/ecc/client-secp256k1-cert.pem
 -V
 
-# client TLSv1.2 ECDHE-ECDSA-AES128-GCM-SHA256 (mutal auth)
+# client TLSv1.2 ECDHE-ECDSA-AES128-GCM-SHA256 (mutual auth)
 -v 3
 -l ECDHE-ECDSA-AES128-GCM-SHA256
 -c ./certs/ecc/client-secp256k1-cert.pem
@@ -65,7 +65,7 @@
 -A ./certs/ecc/client-secp256k1-cert.pem
 -V
 
-# client TLSv1.2 ECDH-ECDSA-AES128-GCM-SHA256 (static - mutal auth)
+# client TLSv1.2 ECDH-ECDSA-AES128-GCM-SHA256 (static - mutual auth)
 -v 3
 -l ECDH-ECDSA-AES128-GCM-SHA256
 -c ./certs/ecc/client-secp256k1-cert.pem
@@ -73,7 +73,7 @@
 -A ./certs/ecc/server-secp256k1-cert.pem
 -C
 
-# server TLSv1.3 TLS13-AES128-GCM-SHA256 (mutal auth)
+# server TLSv1.3 TLS13-AES128-GCM-SHA256 (mutual auth)
 -v 4
 -l TLS13-AES128-GCM-SHA256
 -c ./certs/ecc/server-secp256k1-cert.pem
@@ -81,7 +81,7 @@
 -A ./certs/ecc/client-secp256k1-cert.pem
 -V
 
-# client TLSv1.3 TLS13-AES128-GCM-SHA256 (mutal auth)
+# client TLSv1.3 TLS13-AES128-GCM-SHA256 (mutual auth)
 -v 4
 -l TLS13-AES128-GCM-SHA256
 -c ./certs/ecc/client-secp256k1-cert.pem
@@ -140,7 +140,7 @@
 -A ./certs/ecc/client-bp256r1-cert.pem
 -V
 
-# client TLSv1.2 ECDHE-ECDSA-AES128-GCM-SHA256 (mutal auth)
+# client TLSv1.2 ECDHE-ECDSA-AES128-GCM-SHA256 (mutual auth)
 -v 3
 -l ECDHE-ECDSA-AES128-GCM-SHA256
 -c ./certs/ecc/client-bp256r1-cert.pem
@@ -156,7 +156,7 @@
 -A ./certs/ecc/client-bp256r1-cert.pem
 -V
 
-# client TLSv1.2 ECDH-ECDSA-AES128-GCM-SHA256 (static - mutal auth)
+# client TLSv1.2 ECDH-ECDSA-AES128-GCM-SHA256 (static - mutual auth)
 -v 3
 -l ECDH-ECDSA-AES128-GCM-SHA256
 -c ./certs/ecc/client-bp256r1-cert.pem
@@ -164,7 +164,7 @@
 -A ./certs/ecc/server-bp256r1-cert.pem
 -C
 
-# server TLSv1.3 TLS13-AES128-GCM-SHA256 (mutal auth)
+# server TLSv1.3 TLS13-AES128-GCM-SHA256 (mutual auth)
 -v 4
 -l TLS13-AES128-GCM-SHA256
 -c ./certs/ecc/server-bp256r1-cert.pem
@@ -172,7 +172,7 @@
 -A ./certs/ecc/client-bp256r1-cert.pem
 -V
 
-# client TLSv1.3 TLS13-AES128-GCM-SHA256 (mutal auth)
+# client TLSv1.3 TLS13-AES128-GCM-SHA256 (mutual auth)
 -v 4
 -l TLS13-AES128-GCM-SHA256
 -c ./certs/ecc/client-bp256r1-cert.pem
@@ -210,7 +210,6 @@
 -C
 --bpKs
 -7 3
-
 
 # server TLSv1.2 ECDHE-ECDSA-AES128-GCM-SHA256
 -v 3
