Address warning about -Wno-deprecated-enum-enum-conversion

--- a/configure.ac
+++ b/configure.ac
@@ -10924,7 +10924,7 @@ AX_HARDEN_CC_COMPILER_FLAGS
 # -Wdeprecated-enum-enum-conversion is on by default in C++20, but conflicts with
 # our use of enum constructs to define fungible constants.
 AX_CHECK_COMPILE_FLAG([-Werror -Wno-deprecated-enum-enum-conversion],
-  [AX_APPEND_FLAG([-Wno-deprecated-enum-enum-conversion], [AM_CFLAGS])])
+  [AX_APPEND_FLAG([-Wno-deprecated-enum-enum-conversion], [AM_CXXFLAGS])])
 
 case $host_os in
     mingw*)
