--- a/certs/test/include.am
+++ b/certs/test/include.am
@@ -9,7 +9,14 @@ EXTRA_DIST += \
          certs/test/cert-ext-nc.cfg \
          certs/test/cert-ext-nc.der \
          certs/test/cert-ext-nc.pem \
+         certs/test/cert-ext-nc-combined.der \
+         certs/test/cert-ext-nc-combined.pem \
+         certs/test/cert-ext-ncip.der \
+         certs/test/cert-ext-ncip.pem \
          certs/test/cert-ext-ncdns.der \
+         certs/test/cert-ext-ncdns.pem \
+         certs/test/cert-ext-ncmulti.der \
+         certs/test/cert-ext-ncmulti.pem \
          certs/test/cert-ext-ncmixed.der \
          certs/test/cert-ext-mnc.der \
          certs/test/cert-ext-nct.cfg \
